specify that current RxJava docs are for RxJava 1.x
a first baby step towards #139

--- a/documentation/operators/amb.html
+++ b/documentation/operators/amb.html
@@ -61,7 +61,7 @@ id: amb
      </figure>
   {% endlang_operator %}
 
-  {% lang_operator RxJava amb ambWith %}
+  {% lang_operator RxJava&nbsp;1․x amb ambWith %}
      <figure>
       <img src="images/amb.png" style="width:100%;" alt="amb" />
       <figcaption><p>
