--- a/documentation/operators/and-then-when.html
+++ b/documentation/operators/and-then-when.html
@@ -58,7 +58,7 @@ id: and-then-when
      </figure>
   {% endlang_operator %}
 
-  {% lang_operator RxJava and then when %}
+  {% lang_operator RxJava&nbsp;1․x and then when %}
      <figure>
       <img src="images/and_then_when.png" style="width:100%;" alt="and/then/when" />
       <figcaption><p>
