--- a/documentation/operators/average.html
+++ b/documentation/operators/average.html
@@ -82,7 +82,7 @@ Sequence complete</pre></div>
      </p>
   {% endlang_operator %}
 
-  {% lang_operator RxJava averageDouble averageFloat averageInteger averageLong %}
+  {% lang_operator RxJava&nbsp;1․x averageDouble averageFloat averageInteger averageLong %}
      <p>
       This operator is not in the RxJava core, but is part of the distinct <code>rxjava-math</code>
       module, where it is implemented with four type-specific operators: <code>averageDouble</code>,
