--- a/documentation/operators/backpressure.html
+++ b/documentation/operators/backpressure.html
@@ -122,7 +122,7 @@ id: backpressure
     </figure>
   {% endlang_operator %}
 
-  {% lang_operator RxJava onBackpressureBuffer onBackpressureDrop onBackpressureLatest %}
+  {% lang_operator RxJava&nbsp;1․x onBackpressureBuffer onBackpressureDrop onBackpressureLatest %}
     <p>
      RxJava implements reactive pull backpressure, and many of its operators support that form of
      backpressure. It also has three operators that you can apply to Observables that have not been
