--- a/documentation/operators/buffer.html
+++ b/documentation/operators/buffer.html
@@ -233,7 +233,7 @@ Observable&lt;List&lt;Integer&gt;&gt; burstyBuffered = burstyMulticast.buffer(bu
     </figure>
   {% endlang_operator %}
 
-  {% lang_operator RxJava buffer %}
+  {% lang_operator RxJava&nbsp;1․x buffer %}
     <p>
     In RxJava there are several variants of <span class="operator">Buffer</span>:
     </p>
