--- a/documentation/operators/catch.html
+++ b/documentation/operators/catch.html
@@ -194,7 +194,7 @@ Sequence complete</pre></div>
      </figure>
   {% endlang_operator %}
 
-  {% lang_operator RxJava onErrorResumeNext onErrorReturn onExceptionResumeNext %}
+  {% lang_operator RxJava&nbsp;1․x onErrorResumeNext onErrorReturn onExceptionResumeNext %}
      <p>
       RxJava implements the <span class="operator">Catch</span> operator with three distinct
       operators:
