--- a/documentation/operators/combinelatest.html
+++ b/documentation/operators/combinelatest.html
@@ -78,7 +78,7 @@ id: combinelatest
      </figure>
   {% endlang_operator %}
 
-  {% lang_operator RxJava combineLatest withLatestFrom %}
+  {% lang_operator RxJava&nbsp;1․x combineLatest withLatestFrom %}
      <figure>
       <img src="images/combineLatest.png" style="width:100%;" alt="combineLatest" />
       <figcaption><p>
