--- a/documentation/operators/connect.html
+++ b/documentation/operators/connect.html
@@ -73,7 +73,7 @@ id: connect
     </figure>
   {% endlang_operator %}
 
-  {% lang_operator RxJava connect %}
+  {% lang_operator RxJava&nbsp;1․x connect %}
     <figure class="variant">
      <img src="images/publishConnect.png" style="width:100%;" alt="connect" />
      <figcaption><p>
