--- a/documentation/operators/contains.html
+++ b/documentation/operators/contains.html
@@ -90,7 +90,7 @@ id: contains
      </figure>
   {% endlang_operator %}
 
-  {% lang_operator RxJava contains exists isEmpty %}
+  {% lang_operator RxJava&nbsp;1․x contains exists isEmpty %}
      <figure>
       <img src="images/contains.png" style="width:100%;" alt="contains" />
       <figcaption><p>
