--- a/documentation/operators/count.html
+++ b/documentation/operators/count.html
@@ -75,7 +75,7 @@ Sequence complete</pre></div>
      </ul>
   {% endlang_operator %}
 
-  {% lang_operator RxJava count countLong %}
+  {% lang_operator RxJava&nbsp;1․x count countLong %}
      <p>
       In RxJava the operator is called <code>count</code> and the Observable it creates emits an
       Integer value. There is also a <code>countLong</code> whose Observable emits a Long value.
