--- a/documentation/operators/create.html
+++ b/documentation/operators/create.html
@@ -90,7 +90,7 @@ def myObservable = Observable.create({ aSubscriber ->
     </figure>
   {% endlang_operator %}
 
-  {% lang_operator RxJava create %}
+  {% lang_operator RxJava&nbsp;1․x create %}
     <figure class="variant">
      <img src="images/create.png" style="width:100%;" alt="create" />
      <figcaption><p>
