--- a/documentation/operators/debounce.html
+++ b/documentation/operators/debounce.html
@@ -89,7 +89,7 @@ id: debounce
      </figure>
   {% endlang_operator %}
 
-  {% lang_operator RxJava debounce throttleWithTimeout %}
+  {% lang_operator RxJava&nbsp;1․x debounce throttleWithTimeout %}
      <p>
       RxJava implements this operator as <code>throttleWithTimeout</code> and <code>debounce</code>.
      </p><p>
