--- a/documentation/operators/defaultifempty.html
+++ b/documentation/operators/defaultifempty.html
@@ -61,7 +61,7 @@ id: defaultIfEmpty
      </p>
   {% endlang_operator %}
 
-  {% lang_operator RxJava defaultIfEmpty switchIfEmpty %}
+  {% lang_operator RxJava&nbsp;1․x defaultIfEmpty switchIfEmpty %}
      <figure>
       <img src="images/defaultIfEmpty.png" style="width:100%;" alt="defaultIfEmpty" />
       <figcaption><p>
