--- a/documentation/operators/defer.html
+++ b/documentation/operators/defer.html
@@ -78,7 +78,7 @@ id: defer
     </figure>
   {% endlang_operator %}
 
-  {% lang_operator RxJava defer ifThen switchCase %}
+  {% lang_operator RxJava&nbsp;1․x defer ifThen switchCase %}
     <figure class="variant">
      <img src="images/defer.png" style="width:100%;" alt="defer" />
      <figcaption><p>
