--- a/documentation/operators/delay.html
+++ b/documentation/operators/delay.html
@@ -131,7 +131,7 @@ id: delay
      </figure>
   {% endlang_operator %}
 
-  {% lang_operator RxJava delay delaySubscription %}
+  {% lang_operator RxJava&nbsp;1․x delay delaySubscription %}
      <p>
       RxJava implements this operator as variants of <code>delay</code> and <code>delaySubscription</code>.
      </p>
