--- a/documentation/operators/distinct.html
+++ b/documentation/operators/distinct.html
@@ -98,7 +98,7 @@ id: distinct
      </p>
   {% endlang_operator %}
 
-  {% lang_operator RxJava distinct distinctUntilChanged %}
+  {% lang_operator RxJava&nbsp;1․x distinct distinctUntilChanged %}
      <figure>
       <img src="images/distinct.png" style="width:100%;" alt="distinct" />
       <figcaption><p>
