--- a/documentation/operators/do.html
+++ b/documentation/operators/do.html
@@ -165,7 +165,7 @@ Finally</pre></div>
     </figure>
   {% endlang_operator %}
 
-  {% lang_operator RxJava doOnCompleted doOnEach doOnError doOnNext doOnRequest doOnSubscribe doOnTerminate doOnUnsubscribe finallyDo doAfterTerminate %}
+  {% lang_operator RxJava&nbsp;1․x doOnCompleted doOnEach doOnError doOnNext doOnRequest doOnSubscribe doOnTerminate doOnUnsubscribe finallyDo doAfterTerminate %}
     <p>
      RxJava has several <span class="operator">Do</span> variants.
     </p>
