--- a/documentation/operators/elementat.html
+++ b/documentation/operators/elementat.html
@@ -82,7 +82,7 @@ id: elementAt
      </p>
   {% endlang_operator %}
 
-  {% lang_operator RxJava elementAt elementAtOrDefault %}
+  {% lang_operator RxJava&nbsp;1․x elementAt elementAtOrDefault %}
      <figure>
       <img src="images/elementAt.png" style="width:100%;" alt="elementAt" />
       <figcaption><p>
