--- a/documentation/operators/empty-never-throw.html
+++ b/documentation/operators/empty-never-throw.html
@@ -101,7 +101,7 @@ error: error - badness
      </ul>
   {% endlang_operator %}
 
-  {% lang_operator RxJava empty never error %}
+  {% lang_operator RxJava&nbsp;1․x empty never error %}
      <p>
       RxJava implements these operators as <code>empty</code>, <code>never</code>, and
       <code>error</code>. The <code>error</code> operator takes as a parameter the
