--- a/documentation/operators/filter.html
+++ b/documentation/operators/filter.html
@@ -89,7 +89,7 @@ Sequence complete</pre></div>
      </figure>
   {% endlang_operator %}
 
-  {% lang_operator RxJava filter ofType %}
+  {% lang_operator RxJava&nbsp;1․x filter ofType %}
      <figure>
       <img src="images/filter.png" style="width:100%;" alt="filter" />
       <figcaption><p>
