--- a/documentation/operators/first.html
+++ b/documentation/operators/first.html
@@ -305,7 +305,7 @@ id: first
      </figure>
   {% endlang_operator %}
 
-  {% lang_operator RxJava first firstOrDefault latest mostRecent next single singleOrDefault takeFirst %}
+  {% lang_operator RxJava&nbsp;1․x first firstOrDefault latest mostRecent next single singleOrDefault takeFirst %}
      <p>
       In RxJava, this filtering operator is implemented as <code>first</code>, <code>firstOrDefault</code>,
       and <code>takeFirst</code>.
