--- a/documentation/operators/flatmap.html
+++ b/documentation/operators/flatmap.html
@@ -188,7 +188,7 @@ Sequence complete</pre></div>
     </figure>
   {% endlang_operator %}
 
-  {% lang_operator RxJava concatMap flatMap flatMapIterable StringObervable.split switchMap %}
+  {% lang_operator RxJava&nbsp;1․x concatMap flatMap flatMapIterable StringObervable.split switchMap %}
     <figure class="variant">
      <img src="images/mergeMap.png" style="width:100%;" alt="flatMap" />
      <figcaption><p>
