--- a/documentation/operators/from.html
+++ b/documentation/operators/from.html
@@ -136,7 +136,7 @@ id: from
     </figure>
   {% endlang_operator %}
 
-  {% lang_operator RxJava decode from fromAction fromCallable fromFunc0 fromRunnable runAsync %}
+  {% lang_operator RxJava&nbsp;1․x decode from fromAction fromCallable fromFunc0 fromRunnable runAsync %}
     <figure class="variant">
      <img src="images/from.Future.png" style="width:100%;" alt="from" />
      <figcaption><p>
