--- a/documentation/operators/groupby.html
+++ b/documentation/operators/groupby.html
@@ -136,7 +136,7 @@ Observable.range(1,5)
     </figure>
   {% endlang_operator %}
 
-  {% lang_operator RxJava groupBy %}
+  {% lang_operator RxJava&nbsp;1․x groupBy %}
     <figure class="variant">
      <img src="images/groupBy.png" style="width:100%;" alt="groupBy" />
      <figcaption><p>
