--- a/documentation/operators/ignoreelements.html
+++ b/documentation/operators/ignoreelements.html
@@ -62,7 +62,7 @@ id: ignoreElements
      </p>
   {% endlang_operator %}
 
-  {% lang_operator RxJava ignoreElements %}
+  {% lang_operator RxJava&nbsp;1․x ignoreElements %}
      <figure>
       <img src="images/ignoreElements.png" style="width:100%;" alt="ignoreElements" />
       <figcaption><p>
