--- a/documentation/operators/interval.html
+++ b/documentation/operators/interval.html
@@ -82,7 +82,7 @@ id: interval
     </p>
   {% endlang_operator %}
 
-  {% lang_operator RxJava interval %}
+  {% lang_operator RxJava&nbsp;1․x interval %}
     <figure class="variant">
      <img src="images/interval.png" style="width:100%;" alt="interval" />
      <figcaption><p>
