--- a/documentation/operators/join.html
+++ b/documentation/operators/join.html
@@ -108,7 +108,7 @@ id: join
     </figure>
   {% endlang_operator %}
 
-  {% lang_operator RxJava join groupJoin %}
+  {% lang_operator RxJava&nbsp;1․x join groupJoin %}
     <figure class="variant">
      <img src="images/join_.png" style="width:100%;" alt="join" />
      <figcaption><p>
