--- a/documentation/operators/just.html
+++ b/documentation/operators/just.html
@@ -82,7 +82,7 @@ def observableThatEmitsSeveralNumbers = Observable.just( 1, 2, 3, 4, 5 );</pre><
     </figure>
   {% endlang_operator %}
 
-  {% lang_operator RxJava just %}
+  {% lang_operator RxJava&nbsp;1․x just %}
     <figure class="variant">
      <img src="images/just.png" style="width:100%;" alt="just" />
      <figcaption><p>
