--- a/documentation/operators/last.html
+++ b/documentation/operators/last.html
@@ -163,7 +163,7 @@ id: last
      </figure>
   {% endlang_operator %}
 
-  {% lang_operator RxJava last lastOrDefault %}
+  {% lang_operator RxJava&nbsp;1․x last lastOrDefault %}
      <p>
       In RxJava, this filtering operator is implemented as <code>last</code> and <code>lastOrDefault</code>.
      </p><p>
