--- a/documentation/operators/map.html
+++ b/documentation/operators/map.html
@@ -105,7 +105,7 @@ Sequence complete</pre></div>
      </figure>
   {% endlang_operator %}
 
-  {% lang_operator RxJava byLine cast encode map %}
+  {% lang_operator RxJava&nbsp;1․x byLine cast encode map %}
      <figure>
       <img src="images/map.png" style="width:100%;" alt="map" />
       <figcaption><p>
