--- a/documentation/operators/materialize-dematerialize.html
+++ b/documentation/operators/materialize-dematerialize.html
@@ -117,7 +117,7 @@ Sequence complete</pre></div>
     </figure>
   {% endlang_operator %}
 
-  {% lang_operator RxJava dematerialize materialize %}
+  {% lang_operator RxJava&nbsp;1․x dematerialize materialize %}
     <figure class="variant">
      <img src="images/materialize.png" style="width:100%;" alt="materialize" />
      <figcaption><p>
