--- a/documentation/operators/max.html
+++ b/documentation/operators/max.html
@@ -68,7 +68,7 @@ id: max
      </figure>
   {% endlang_operator %}
 
-  {% lang_operator RxJava max maxBy %}
+  {% lang_operator RxJava&nbsp;1․x max maxBy %}
      <p>
       In RxJava, this operator is not in the ReactiveX core, but is part of the distinct
       <code>rxjava-math</code> module.
