--- a/documentation/operators/merge.html
+++ b/documentation/operators/merge.html
@@ -210,7 +210,7 @@ Sequence complete</pre></div>
      </figure>
   {% endlang_operator %}
 
-  {% lang_operator RxJava merge mergeDelayError mergeWith %}
+  {% lang_operator RxJava&nbsp;1․x merge mergeDelayError mergeWith %}
      <p>
       RxJava implements this operator as <code>merge</code>, <code>mergeWith</code>, and
       <code>mergeDelayError</code>.
