--- a/documentation/operators/min.html
+++ b/documentation/operators/min.html
@@ -68,7 +68,7 @@ id: min
      </figure>
   {% endlang_operator %}
 
-  {% lang_operator RxJava min minBy %}
+  {% lang_operator RxJava&nbsp;1․x min minBy %}
      <p>
       In RxJava, this operator is not in the ReactiveX core, but is part of the distinct
       <code>rxjava-math</code> module.
