--- a/documentation/operators/observeon.html
+++ b/documentation/operators/observeon.html
@@ -95,7 +95,7 @@ id: observeOn
     </figure>
   {% endlang_operator %}
 
-  {% lang_operator RxJava observeOn %}
+  {% lang_operator RxJava&nbsp;1․x observeOn %}
     <figure class="variant">
      <img src="images/observeOn.png" style="width:100%;" alt="observeOn" />
      <figcaption><p>
