--- a/documentation/operators/publish.html
+++ b/documentation/operators/publish.html
@@ -72,7 +72,7 @@ id: publish
     </figure>
   {% endlang_operator %}
 
-  {% lang_operator RxJava publish %}
+  {% lang_operator RxJava&nbsp;1․x publish %}
     <figure class="variant">
      <img src="images/publishConnect.png" style="width:100%;" alt="publish" />
      <figcaption><p>
