--- a/documentation/operators/range.html
+++ b/documentation/operators/range.html
@@ -68,7 +68,7 @@ def myObservable = Observable.range(5, 3);</pre></div>
     </figure>
   {% endlang_operator %}
 
-  {% lang_operator RxJava range %}
+  {% lang_operator RxJava&nbsp;1․x range %}
     <figure class="variant">
      <img src="images/range.png" style="width:100%;" alt="range" />
      <figcaption><p>
