--- a/documentation/operators/reduce.html
+++ b/documentation/operators/reduce.html
@@ -128,7 +128,7 @@ Sequence complete</pre></div>
      </figure>
   {% endlang_operator %}
 
-  {% lang_operator RxJava collect reduce %}
+  {% lang_operator RxJava&nbsp;1․x collect reduce %}
      <figure>
       <img src="images/reduce.png" style="width:100%;" alt="reduce" />
       <figcaption><p>
