--- a/documentation/operators/refcount.html
+++ b/documentation/operators/refcount.html
@@ -74,7 +74,7 @@ id: refcount
     </ul>
   {% endlang_operator %}
 
-  {% lang_operator RxJava refCount share %}
+  {% lang_operator RxJava&nbsp;1․x refCount share %}
     <figure class="variant">
      <img src="images/publishRefCount.png" style="width:100%;" alt="refCount" />
      <figcaption><p>
