--- a/documentation/operators/repeat.html
+++ b/documentation/operators/repeat.html
@@ -107,7 +107,7 @@ id: repeat
     </figure>
   {% endlang_operator %}
 
-  {% lang_operator RxJava doWhile repeat repeatWhen whileDo %}
+  {% lang_operator RxJava&nbsp;1․x doWhile repeat repeatWhen whileDo %}
     <figure class="variant">
      <img src="images/repeat.o.png" style="width:100%;" alt="repeat" />
      <figcaption><p>
