--- a/documentation/operators/replay.html
+++ b/documentation/operators/replay.html
@@ -105,7 +105,7 @@ id: replay
     </figure>
   {% endlang_operator %}
 
-  {% lang_operator RxJava replay cache %}
+  {% lang_operator RxJava&nbsp;1․x replay cache %}
     <figure class="variant">
      <img src="images/replay.png" style="width:100%;" alt="replay" />
      <figcaption><p>
