--- a/documentation/operators/retry.html
+++ b/documentation/operators/retry.html
@@ -110,7 +110,7 @@ id: retry
      </figure>
   {% endlang_operator %}
 
-  {% lang_operator RxJava retry retryWhen %}
+  {% lang_operator RxJava&nbsp;1․x retry retryWhen %}
      <p>
       RxJava has two versions of this operator: <code>retry</code> and <code>retryWhen</code>.
      </p>
