--- a/documentation/operators/sample.html
+++ b/documentation/operators/sample.html
@@ -152,7 +152,7 @@ Sequence complete</pre></div>
      </figure>
   {% endlang_operator %}
 
-  {% lang_operator RxJava sample throttleFirst throttleLast %}
+  {% lang_operator RxJava&nbsp;1․x sample throttleFirst throttleLast %}
      <p>
       RxJava implements this operator as <code>sample</code> and <code>throttleLast</code>.
      </p><p>
