--- a/documentation/operators/scan.html
+++ b/documentation/operators/scan.html
@@ -98,7 +98,7 @@ Sequence complete</pre></div>
      </p>
   {% endlang_operator %}
 
-  {% lang_operator RxJava scan %}
+  {% lang_operator RxJava&nbsp;1․x scan %}
      <figure>
       <img src="images/scan.png" style="width:100%;" alt="scan" />
       <figcaption><p>
