--- a/documentation/operators/serialize.html
+++ b/documentation/operators/serialize.html
@@ -54,7 +54,7 @@ id: serialize
     </figure>
   {% endlang_operator %}
 
-  {% lang_operator RxJava serialize %}
+  {% lang_operator RxJava&nbsp;1․x serialize %}
     <figure class="variant">
      <img src="images/synchronize.png" style="width:100%;" alt="serialize" />
      <figcaption><p>
