--- a/documentation/operators/skip.html
+++ b/documentation/operators/skip.html
@@ -99,7 +99,7 @@ Sequence complete</pre></div>
      </figure>
   {% endlang_operator %}
 
-  {% lang_operator RxJava skip %}
+  {% lang_operator RxJava&nbsp;1․x skip %}
      <figure>
       <img src="images/skip.png" style="width:100%;" alt="skip" />
       <figcaption><p>
