--- a/documentation/operators/skiplast.html
+++ b/documentation/operators/skiplast.html
@@ -88,7 +88,7 @@ id: skipLast
      </figure>
   {% endlang_operator %}
 
-  {% lang_operator RxJava skipLast %}
+  {% lang_operator RxJava&nbsp;1․x skipLast %}
      <figure>
       <img src="images/skipLast.png" style="width:100%;" alt="skipLast" />
       <figcaption><p>
