--- a/documentation/operators/skipuntil.html
+++ b/documentation/operators/skipuntil.html
@@ -65,7 +65,7 @@ id: skipUntil
      </figure>
   {% endlang_operator %}
 
-  {% lang_operator RxJava skipUntil %}
+  {% lang_operator RxJava&nbsp;1․x skipUntil %}
      <figure>
       <img src="images/skipUntil.png" style="width:100%;" alt="skipUntil" />
       <figcaption><p>
