--- a/documentation/operators/skipwhile.html
+++ b/documentation/operators/skipwhile.html
@@ -83,7 +83,7 @@ Sequence complete</pre></div>
      </figure>
   {% endlang_operator %}
 
-  {% lang_operator RxJava skipWhile %}
+  {% lang_operator RxJava&nbsp;1․x skipWhile %}
      <figure>
       <img src="images/skipWhile.png" style="width:100%;" alt="skipWhile" />
       <figcaption><p>
