--- a/documentation/operators/start.html
+++ b/documentation/operators/start.html
@@ -171,7 +171,7 @@ id: start
     </p>
   {% endlang_operator %}
 
-  {% lang_operator RxJava asyncAction asyncFunc deferFuture forEachFuture fromAction fromCallable fromFunc0 fromRunnable start startFuture toAsync %}
+  {% lang_operator RxJava&nbsp;1․x asyncAction asyncFunc deferFuture forEachFuture fromAction fromCallable fromFunc0 fromRunnable start startFuture toAsync %}
     <p>
      The various RxJava implementations of <span class="operator">Start</span> are found in the
      optional <code>rxjava-async</code> module.
