--- a/documentation/operators/startwith.html
+++ b/documentation/operators/startwith.html
@@ -103,7 +103,7 @@ myObservable.startWith(-3, -2, -1, 0).subscribe(
      </figure>
   {% endlang_operator %}
 
-  {% lang_operator RxJava startWith %}
+  {% lang_operator RxJava&nbsp;1․x startWith %}
      <p>
       RxJava implements this operator as <code>startWith</code>.
      </p>
