--- a/documentation/operators/subscribe.html
+++ b/documentation/operators/subscribe.html
@@ -143,7 +143,7 @@ id: subscribe
     </figure>
   {% endlang_operator %}
 
-  {% lang_operator RxJava BlockingObservable.forEach forEach subscribe %}
+  {% lang_operator RxJava&nbsp;1․x BlockingObservable.forEach forEach subscribe %}
     <p>
      RxJava implements several variants of <code>subscribe</code>.
     </p><p>
