--- a/documentation/operators/subscribeon.html
+++ b/documentation/operators/subscribeon.html
@@ -94,7 +94,7 @@ id: subscribeOn
     </ul>
   {% endlang_operator %}
 
-  {% lang_operator RxJava subscribeOn unsubscribeOn %}
+  {% lang_operator RxJava&nbsp;1․x subscribeOn unsubscribeOn %}
     <figure class="variant">
      <img src="images/subscribeOn.png" style="width:100%;" alt="subscribeOn" />
      <figcaption><p>
