--- a/documentation/operators/sum.html
+++ b/documentation/operators/sum.html
@@ -96,7 +96,7 @@ Sequence complete</pre></div>
     </figure>
   {% endlang_operator %}
 
-  {% lang_operator RxJava sumDouble sumFloat sumInteger sumLong StringObservable.join StringObservable.stringConcat %}
+  {% lang_operator RxJava&nbsp;1․x sumDouble sumFloat sumInteger sumLong StringObservable.join StringObservable.stringConcat %}
      <p>
       This operator is not in the RxJava core, but is part of the distinct <code>rxjava-math</code>
       module, where it is implemented with four type-specific operators: <code>sumDouble</code>,
