--- a/documentation/operators/switch.html
+++ b/documentation/operators/switch.html
@@ -64,7 +64,7 @@ id: switch
     </figure>
   {% endlang_operator %}
 
-  {% lang_operator RxJava switchOnNext %}
+  {% lang_operator RxJava&nbsp;1․x switchOnNext %}
     <figure class="variant">
      <img src="images/switchDo.png" style="width:100%;" alt="switch" />
      <figcaption><p>
