--- a/documentation/operators/take.html
+++ b/documentation/operators/take.html
@@ -102,7 +102,7 @@ Sequence complete</pre></div>
      </figure>
   {% endlang_operator %}
 
-  {% lang_operator RxJava limit take %}
+  {% lang_operator RxJava&nbsp;1․x limit take %}
      <figure>
       <img src="images/take.png" style="width:100%;" alt="take" />
       <figcaption><p>
