--- a/documentation/operators/takelast.html
+++ b/documentation/operators/takelast.html
@@ -131,7 +131,7 @@ Sequence complete</pre></div>
      </figure>
   {% endlang_operator %}
 
-  {% lang_operator RxJava takeLast takeLastBuffer %}
+  {% lang_operator RxJava&nbsp;1․x takeLast takeLastBuffer %}
      <figure>
       <img src="images/takeLast.n.png" style="width:100%;" alt="takeLast" />
       <figcaption><p>
