--- a/documentation/operators/takeuntil.html
+++ b/documentation/operators/takeuntil.html
@@ -80,7 +80,7 @@ id: takeUntil
      </figure>
   {% endlang_operator %}
 
-  {% lang_operator RxJava takeUntil %}
+  {% lang_operator RxJava&nbsp;1․x takeUntil %}
      <figure>
       <img src="images/takeUntil.png" style="width:100%;" alt="takeUntil" />
       <figcaption><p>
