--- a/documentation/operators/takewhile.html
+++ b/documentation/operators/takewhile.html
@@ -84,7 +84,7 @@ Sequence complete</pre></div>
      </figure>
   {% endlang_operator %}
 
-  {% lang_operator RxJava takeWhile %}
+  {% lang_operator RxJava&nbsp;1․x takeWhile %}
      <figure>
       <img src="images/takeWhile.png" style="width:100%;" alt="takeWhile" />
       <figcaption><p>
