--- a/documentation/operators/template.html
+++ b/documentation/operators/template.html
@@ -52,7 +52,7 @@ id: oPERATOR
     </figure>
   {% endlang_operator %}
 
-  {% lang_operator RxJava %}
+  {% lang_operator RxJava&nbsp;1․x %}
     <figure class="variant">
      <img src="images/oPERATOR.png" style="width:100%;" alt="oPERATOR" />
      <figcaption><p>
