--- a/documentation/operators/timeinterval.html
+++ b/documentation/operators/timeinterval.html
@@ -64,7 +64,7 @@ id: timeInterval
      </figure>
   {% endlang_operator %}
 
-  {% lang_operator RxJava timeInterval %}
+  {% lang_operator RxJava&nbsp;1․x timeInterval %}
      <figure>
       <img src="images/timeInterval.png" style="width:100%;" alt="timeInterval" />
       <figcaption><p>
