--- a/documentation/operators/timeout.html
+++ b/documentation/operators/timeout.html
@@ -142,7 +142,7 @@ id: timeout
      </figure>
   {% endlang_operator %}
 
-  {% lang_operator RxJava timeout %}
+  {% lang_operator RxJava&nbsp;1․x timeout %}
      <p>
       RxJava implements this operator as <code>timeout</code>, but in several variants.
      </p>
