--- a/documentation/operators/timestamp.html
+++ b/documentation/operators/timestamp.html
@@ -78,7 +78,7 @@ Sequence complete</pre></div>
      </figure>
   {% endlang_operator %}
 
-  {% lang_operator RxJava timestamp %}
+  {% lang_operator RxJava&nbsp;1․x timestamp %}
      <figure>
       <img src="images/timestamp.png" style="width:100%;" alt="timestamp" />
       <figcaption><p>
