--- a/documentation/operators/to.html
+++ b/documentation/operators/to.html
@@ -232,7 +232,7 @@ Sequence complete</pre></div>
     </figure>
   {% endlang_operator %}
 
-  {% lang_operator RxJava BlockingObservable.from BlockingObservable.getIterator nest toBlocking BlockingObservable.toFuture BlockingObservable.toIterable toList toMap toMultiMap toSortedList %}
+  {% lang_operator RxJava&nbsp;1․x BlockingObservable.from BlockingObservable.getIterator nest toBlocking BlockingObservable.toFuture BlockingObservable.toIterable toList toMap toMultiMap toSortedList %}
     <figure class="variant">
      <img src="images/B.getIterator.png" style="width:100%;" alt="getIterator" />
      <figcaption><p>
