--- a/documentation/operators/using.html
+++ b/documentation/operators/using.html
@@ -66,7 +66,7 @@ id: using
      </figure>
   {% endlang_operator %}
 
-  {% lang_operator RxJava using %}
+  {% lang_operator RxJava&nbsp;1․x using %}
      <figure>
       <img src="images/using.png" style="width:100%;" alt="using" />
       <figcaption><p>
