--- a/documentation/operators/window.html
+++ b/documentation/operators/window.html
@@ -305,7 +305,7 @@ Observable&lt;Observable&lt;Integer&gt;&gt; burstyWindowed = bursty.window(5);</
     </figure>
   {% endlang_operator %}
 
-  {% lang_operator RxJava window %}
+  {% lang_operator RxJava&nbsp;1․x window %}
      <p>
       There are several varieties of <span class="operator">Window</span> in RxJava.
      </p>
