--- a/documentation/operators/zip.html
+++ b/documentation/operators/zip.html
@@ -111,7 +111,7 @@ Sequence complete</pre></div>
      </p>
   {% endlang_operator %}
 
-  {% lang_operator RxJava zip zipWith %}
+  {% lang_operator RxJava&nbsp;1․x zip zipWith %}
      <p>
       RxJava implements this operator as several variants of <code>zip</code> and also as
       <code>zipWith</code>, an instance function version of the operator.
