--- a/documentation/operators/all.html
+++ b/documentation/operators/all.html
@@ -74,7 +74,7 @@ true</pre></div>
      </figure>
   {% endlang_operator %}
 
-  {% lang_operator RxJava all %}
+  {% lang_operator RxJava&nbsp;1․x all %}
      <figure>
       <img src="images/all.png" style="width:100%;" alt="all" />
       <figcaption><p>
