--- a/documentation/operators/concat.html
+++ b/documentation/operators/concat.html
@@ -143,7 +143,7 @@ Sequence complete</pre></div>
      </ul>
   {% endlang_operator %}
 
-  {% lang_operator RxJava concat concatWith %}
+  {% lang_operator RxJava&nbsp;1․x concat concatWith %}
      <figure>
       <img src="images/concat.png" style="width:100%;" alt="concat" />
       <figcaption><p>
