--- a/documentation/operators/timer.html
+++ b/documentation/operators/timer.html
@@ -64,7 +64,7 @@ id: timer
     </figure>
   {% endlang_operator %}
 
-  {% lang_operator RxJava timer %}
+  {% lang_operator RxJava&nbsp;1․x timer %}
     <p>RxJava implements this operator as <code>timer</code>.</p>
     <figure class="variant">
      <img src="images/timer.png" style="width:100%;" alt="timer" />
